# base0000

./: .gitignore  README.md  base10000.py  pyproject.toml
base0000/: .gitignore  LICENSE  README.md  base10000.py
base0000/docs/: b10k_spec.md
base0000/src/b10k/: __init__.py
base0000/tests/: __init__.py  helpers.py  run_all.py  test_arithmetic.py  test_constants.py  test_exp_log.py  test_math.py  test_parse_format.py  test_trig.py
docs/: b10k_spec.md
src/b10k/: __init__.py
